Modified project settings

--- a/project.config
+++ b/project.config
@@ -1,2 +1,4 @@
 [access]
 	inheritFrom = TroidsOnly
+[project]
+	description = A Java Discord bot to take over as the automated moderation assistance bot on the Metroid Community Discord server.
