Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,3 +2,7 @@
 	inheritFrom = TroidsOnly
 [project]
 	description = A Java Discord bot to take over as the automated moderation assistance bot on the Metroid Community Discord server.
+[access "refs/*"]
+	owner = group TroidsOnly Admins
+	read = group Anonymous Users
+	read = group Registered Users
