Add Persistence, Discord Role ACL, !bomb, !tubes
This very large commit adds several important backend features and one minor
frontend feature to the bot.

The frontend feature is simple !tubes and !bomb!

The backend features are proper access control using a Discord's server's
existing roles to assign permissions in the bot to users, and persistence,
allowing bot classes to store their state to persist between restarts.

Change-Id: Ieb8c51bf5844623c00d0ca7afc810f6c7cb7f6f6

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ dependency-reduced-pom.xml
 
 #...but not their defaults
 !src/main/resources/default.config.props
+
+#Ignore the tubes folder
+/tubes/
+
+#Ignore state files
+*.json
