--- a/pom.xml
+++ b/pom.xml
@@ -42,14 +42,35 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.4.1</version>
+                <version>3.2.1</version>
                 <configuration>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>com.troidsonly.modbot.ModBot</mainClass>
                         </transformer>
                     </transformers>
+                    <filters>
+                        <filter>
+                            <artifact>org.lizardirc:beancounter</artifact>
+                            <excludes>
+                                <exclude>com/**</exclude>
+                                <exclude>javax/**</exclude>
+                                <exclude>mozilla/**</exclude>
+                                <exclude>redis/**</exclude>
+                                <exclude>org/apache/**</exclude>
+                                <exclude>org/checkerframework/**</exclude>
+                                <exclude>org/joda/**</exclude>
+                                <exclude>org/jsoup/**</exclude>
+                                <exclude>org/pircbotx/**</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
                 </configuration>
                 <executions>
                     <execution>
@@ -66,12 +87,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.7</version>
+                <version>3.2.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.2.0</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -93,7 +114,7 @@
         <repository>
             <id>jcenter</id>
             <name>jcenter-bintray</name>
-            <url>http://jcenter.bintray.com</url>
+            <url>https://jcenter.bintray.com</url>
         </repository>
         <repository>
             <id>lizardnet-repo</id>
@@ -106,6 +127,12 @@
             <groupId>org.lizardirc</groupId>
             <artifactId>beancounter</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -125,7 +152,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>3.3.1_295</version>
+            <version>4.2.0_214</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
