--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
             <id>lizardnet-repo</id>
             <url>https://integration.fastlizard4.org:444/jenkins/plugin/repository/everything/</url>
         </repository>
+        <repository>
+            <id>dv8tion</id>
+            <name>m2-dv8tion</name>
+            <url>https://m2.dv8tion.net/releases</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -152,7 +157,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>4.2.0_214</version>
+            <version>4.3.0_277</version>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
